<resources>
    <string name="app_name">CinemApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="collections_unavailable">To be able to add movies into your collections you need to be signed in.</string>
    <string name="nav_my_collections">My Collections</string>
    <string name="nav_search">Search</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="title_movie_details">Movie Details</string>
    <string name="title_actor_details">Actor Details</string>
    <string name="title_collections"> My Collections</string>
    <string name="settings_appearance_label">Appearance</string>
    <string name="settings_language_label">Language</string>
    <string name="settings_about_label">About</string>
    <string name="settings_appearance_system_default">System Default</string>
    <string name="settings_appearance_light">Light</string>
    <string name="settings_appearance_dark">Dark</string>
    <string name="settings_language_english">English</string>
    <string name="settings_language_srpski">Српски</string>
    <string name="no_content_description">No content description</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">or</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="tmdb_disclaimer">This application uses TMDB and the TMDB APIs but is not endorsed, certified, or otherwise approved by TMDB.</string>
    <string name="movie_list_upcoming">Upcoming</string>
    <string name="movie_list_popular">Popular</string>
    <string name="movie_list_top_rated">Top Rated</string>
    <string name="name">Name</string>
    <string name="description_expand_more">More</string>
    <string name="movie_rating_label_unrated">Rate this</string>
    <string name="movie_rating_label_rated">Your rating</string>
    <string name="movie_rating_none">No rating</string>
    <string name="movie_favorites_add">Add to Favorites</string>
    <string name="movie_favorites_remove">Remove from Favorites</string>
    <string name="movie_watchlist_add">Add to Watchlist</string>
    <string name="movie_watchlist_remove">Remove from Watchlist</string>
    <string name="cast">Cast</string>
    <string name="actor_age">Age</string>
    <string name="actor_gender">Gender</string>
    <string name="search_hint">Search..</string>
    <string name="list_movies">Movies</string>
    <string name="list_actors">Actors</string>
    <string name="search_no_results">No results</string>
    <string name="list_favorites">Favorites</string>
    <string name="list_watchlist">Watchlist</string>
    <string name="list_rated">Rated</string>
    <string name="title_settings_appearance">Select theme</string>
    <string name="title_settings_language">Select language</string>
    <string name="title_settings_about">About</string>
    <string name="settings_about_version_label">Version</string>
    <string name="settings_about_version_value">1.0</string>
    <string name="settings_about_author_label">Author</string>
    <string name="settings_about_author_value">Milan Gigić</string>
    <string name="settings_about_purpose_label">Purpose</string>
    <string name="settings_about_purpose_value">Masters Thesis</string>
    <string name="sign_in_failed">Incorrect sign in credentials</string>
    <string name="director_label">Director:</string>
    <string name="description_label">Description:</string>
    <string name="unannounced">Unannounced</string>
    <string name="all_movies">All movies</string>
    <string name="university">University of Belgrade - School of Electrical Engineering, 2024</string>
    <string name="settings_about_description_label">Description</string>
    <string name="settings_about_description_value">Cinemapp is an app created for the Android platform meant to be used for seaching up information about movies and actors, as well as interacting with them via a TMDB account.</string>
    <string name="settings_about_mentor_label">Mentor</string>
    <string name="settings_about_mentor_value">prof. dr Igor Tartalja</string>
    <string name="user_manual">User Manual</string>
    <string name="permission_denied_download">Permission Denied! Cannot download file.</string>
    <string name="view_crew_label">View entire crew ></string>
    <string name="exclude_self">Only Movies</string>
</resources>