<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/nav_home"
        android:enabled="true"
        android:icon="@drawable/vic_home"/>
    <item
        android:id="@+id/searchFragment"
        android:title="@string/nav_search"
        android:enabled="true"
        android:icon="@drawable/vic_search"/>
    <item
        android:id="@+id/collectionsFragment"
        android:title="@string/nav_my_collections"
        android:enabled="true"
        android:icon="@drawable/vic_collections"/>
    <item
        android:id="@+id/settingsFragment"
        android:title="@string/nav_settings"
        android:enabled="true"
        android:icon="@drawable/vic_settings"/>

</menu>