<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/md_theme_primary"
    tools:context=".ui.authentication.AuthenticationActivity">

    <LinearLayout
        android:id="@+id/llSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/tvDisclaimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/no_content_description"
            android:src="@drawable/tmdb_logo_primary_full" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:labelFor="@id/etUsername"
            android:text="@string/username"
            android:textColor="@color/md_theme_onPrimary" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:background="@drawable/search_view_bg"
            android:inputType="textWebEmailAddress"
            android:padding="10dp"
            android:textColor="@color/md_theme_onPrimary" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:labelFor="@id/etPassword"
            android:text="@string/password"
            android:textColor="@color/md_theme_onPrimary" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:background="@drawable/search_view_bg"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/md_theme_onPrimary" />


        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:backgroundTint="@color/md_theme_onPrimary"
            android:clickable="true"
            android:text="@string/sign_in"
            android:textColor="@color/md_theme_primary" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/md_theme_tertiary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/or"
            android:textColor="@color/md_theme_secondary" />

        <TextView
            android:id="@+id/tvGuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/continue_as_guest"
            android:textColor="@color/md_theme_tertiary" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvDisclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/tmdb_disclaimer"
        android:textAlignment="center"
        android:textColor="@color/md_theme_secondary"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>