<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_surface"
    android:orientation="vertical"
    tools:context=".ui.main.settings.SettingsMainFragment">


    <com.example.cinemapp.ui.main.settings.SettingsItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/vic_appearance"
        app:isLast="false"
        app:label="@string/settings_appearance_label" />

    <com.example.cinemapp.ui.main.settings.SettingsItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/vic_language"
        app:isLast="false"
        app:label="@string/settings_language_label" />

    <com.example.cinemapp.ui.main.settings.SettingsItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/vic_info"
        app:isLast="true"
        app:label="@string/settings_about_label" />

</LinearLayout>