<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="0dp"
    app:cardBackgroundColor="@color/md_theme_primary"
    app:strokeColor="@color/md_theme_onPrimary">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <RelativeLayout
            android:id="@+id/rlAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvAvatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="50dp"
                app:strokeColor="@color/md_theme_onSurface"
                app:strokeWidth="1dp">

                <ImageView
                    android:id="@+id/ivAvatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@color/md_theme_onPrimary"
                    tools:ignore="ContentDescription" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvInitial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/cvAvatar"
                android:layout_alignTop="@id/cvAvatar"
                android:layout_alignEnd="@id/cvAvatar"
                android:layout_alignBottom="@id/cvAvatar"
                android:gravity="center"
                android:textColor="@color/md_theme_primary"
                android:textSize="50sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llNames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeMaxTextSize="30sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:text="@string/username"
                android:textColor="@color/md_theme_secondary"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:text="@string/name"
                android:textColor="@color/md_theme_tertiary"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSignInOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/md_theme_onPrimary"
            android:clickable="true"
            android:text="@string/sign_out"
            android:textColor="@color/md_theme_primary" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>